Change webpack.config to fix issue; images not showing when a file gets updates usinf dev-server

--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,7 @@ body {
 }
 
 header {
-  
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
